fix alignment

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: white;
   display: flex;
   flex-direction: column;
